# storage/api-docs/api-docs.json
@@ -363,6 +363,10 @@
                                                                         "type": "integer",
                                                                         "example": 10
                                                                     },
+                                                                    "type": {
+                                                                        "type": "string",
+                                                                        "example": "post"
+                                                                    },
                                                                     "title": {
                                                                         "type": "string",
                                                                         "example": "Sample Post Title"
@@ -385,6 +389,11 @@
                                                                             "name": {
                                                                                 "type": "string",
                                                                                 "example": "HMTE"
+                                                                            },
+                                                                            "logo_url": {
+                                                                                "type": "string",
+                                                                                "example": "http://localhost:8000/storage/ukms/logo.jpg",
+                                                                                "nullable": true
                                                                             }
                                                                         },
                                                                         "type": "object"
@@ -400,6 +409,10 @@
                                                                     "id": {
                                                                         "type": "integer",
                                                                         "example": 11
+                                                                    },
+                                                                    "type": {
+                                                                        "type": "string",
+                                                                        "example": "event"
                                                                     },
                                                                     "title": {
                                                                         "type": "string",
@@ -423,6 +436,11 @@
                                                                             "name": {
                                                                                 "type": "string",
                                                                                 "example": "HMTE"
+                                                                            },
+                                                                            "logo_url": {
+                                                                                "type": "string",
+                                                                                "example": "http://localhost:8000/storage/ukms/logo.jpg",
+                                                                                "nullable": true
                                                                             }
                                                                         },
                                                                         "type": "object"
@@ -445,6 +463,11 @@
                                                             "name": {
                                                                 "type": "string",
                                                                 "example": "HMIF"
+                                                            },
+                                                            "logo_url": {
+                                                                "type": "string",
+                                                                "example": "http://localhost:8000/storage/ukms/logo.jpg",
+                                                                "nullable": true
                                                             }
                                                         },
                                                         "type": "object"
